// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoMatch/> Component render component trying to reach <User/> component with no username 1`] = `
<div>
  <div
    class="sc-hKgILt fzCzjc uk-animation-fade uk-padding-large"
  >
    <div>
      <img
        alt="not found"
        class="sc-dlfnbm hgZGFd"
        src="search.svg"
      />
      <h3
        class="sc-dIUggk iSqZBj uk-margin-small"
      >
        We're looking for 
        <code
          class="sc-hHftDr iOCOgQ"
        >
          /user/
        </code>
         but we don't have any results
      </h3>
    </div>
    <div
      class="uk-margin"
    >
      <a
        href="/"
      >
        <code
          class="sc-hHftDr iOCOgQ"
        >
          Return to the main page
        </code>
      </a>
    </div>
  </div>
</div>
`;

exports[`<NoMatch/> Component render component without route provided 1`] = `
<div>
  <div
    class="sc-hKgILt fzCzjc uk-animation-fade uk-padding-large"
  >
    <div>
      <img
        alt="not found"
        class="sc-dlfnbm hgZGFd"
        src="search.svg"
      />
      <h3
        class="sc-dIUggk iSqZBj uk-margin-small"
      >
        We're looking for 
        <code
          class="sc-hHftDr iOCOgQ"
        >
          /
        </code>
         but we don't have any results
      </h3>
    </div>
    <div
      class="uk-margin"
    >
      <a
        href="/"
      >
        <code
          class="sc-hHftDr iOCOgQ"
        >
          Return to the main page
        </code>
      </a>
    </div>
  </div>
</div>
`;
